--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>All the best for exams </title>
+  <title>All the best rituu </title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -22,11 +22,14 @@
   <div class="text-container">
 
     <p>
-     All the best baaku💫 .♡♡
-        🌷 Sending you a flower 💐of good luck🌠and positive vibes May God's guidance 💝be with you during the Exam📑 and may you be able to answer each question correctly✔️ My Prayers 🛐and Blessings are with you😇.!!
-      Don't stress ,🥺
-       🪐Do your best panda🐼💞..........       AISHITERU♥️
-     
+     All the best Rituuuu.♡♡
+        🌷 Sending you a flower 💐of good luck.
+            Timile sabai exam ramro nai gardai xau hola,aba physics baki xa tyo pani ramroooo haiii hamile. 
+      Don't stress ,
+       🪐Do your best Rituuu..........       
+(yo exam agadi banako thiye hai)
+Aaile aba result ko lagi best of luck
+                 -Dipuuuuu
     </p>
   </div>
 </div>
