--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       Don't stress ,
        🪐Do your best Rituuu..........       
 (yo exam agadi banako thiye hai)
-Aaile aba result ko lagi best of luck
+Aaile aba result ko lagi all the very very best of luck timilai
                      -From Dipuuuuu
     </p>
   </div>
